--- a/src/components/Common/LayoutComponent/style.scss
+++ b/src/components/Common/LayoutComponent/style.scss
@@ -13,6 +13,16 @@
         position: relative;
         transition: all .3s ease;
         min-height: 100vh;
-        margin-left: 240px;
+        margin-left: 80px;
+        padding: 50px;
+    }
+}
+.card-wrapper {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+    border-radius: 8px;
+    padding: 24px;
+    .card-colum-wrapper {
+        display: flex;        
     }
 }
