--- a/src/components/Common/SideBar/SidebarComponent/style.scss
+++ b/src/components/Common/SideBar/SidebarComponent/style.scss
@@ -5,20 +5,44 @@
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 998;
+    z-index: 99;
+    width: 50px;
     height: 100vh;
-    height: calc(var(--vh, 1vh)*100);
+    overflow: hidden;
     background-color: $primary;
-    width: 240px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-
+    transition: all 0.5s ease 0s;
+    padding: 0 16px;    
     .logo-header {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: 32px 16px 24px;
+        margin: 24px 0;
         padding: 14px 10px;
+        .without-hover {
+            display: block;
+        }
+        .on-hover,
+        .sidebar-icon {
+            display: none;
+        }
+    }
+    &:hover {
+        width: 208px;
+        span {
+            display: block;
+        }
+        .logo-header {
+            margin: 32px 0;
+            .without-hover {
+                display: none;
+            }
+            .on-hover,
+            .sidebar-icon {
+                display: block;
+            }
+        }
     }
 }
