--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -2,7 +2,7 @@ table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    margin: 20px 20px 20px 20px;
+    /* margin: 20px 20px 20px 20px; */
   }
   
   table td, table th {
