--- a/src/components/Common/Badge/style.scss
+++ b/src/components/Common/Badge/style.scss
@@ -2,6 +2,8 @@
 
 .badge {
     padding: 2px 8px;
+    font-size: 12px;
+    line-height: 18px;
     &.bg-success {
         background: $bg-light-green !important;
         color: $fonts-green;
