--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -1,27 +1,95 @@
+@import "../../../global.scss";
+
 table {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    /* margin: 20px 20px 20px 20px; */
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 20px 20px 20px 20px;
+  background-color: $white;
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
+    0px 1px 2px rgba(16, 24, 40, 0.06);
+  border-radius: 8px;
+
+  thead {
+    tr {
+      border-radius: 8px 8px 0 0;
+    }
   }
-  
-  table td, table th {
-    border: 1px solid #ddd;
-    padding: 8px;
+  tbody {
+    tr {
+      &:nth-child(even) {
+        background-color: $bg-light;
+      }
+      &:first-child {
+        border-radius: 8px 8px 0 0;
+        td {
+          &:first-child {
+            border-radius: 8px 0 0 0;
+          }
+          &:last-child {
+            border-radius: 0 8px 0 0;
+          }
+        }
+      }
+      &:last-child {
+        border-radius: 0 0 8px 8px;
+        td {
+          &:first-child {
+            border-radius: 0 0 0 8px;
+          }
+          &:last-child {
+            border-radius: 0 0 8px 0;
+          }
+        }
+      }
+    }
   }
-  table td{
-    color: #101828;
+  td {
+    padding: 26px 16px;
+    color: $fonts-grey-700;
+    font-size: 14px;
+    line-height: 20px;
+    vertical-align: middle;
+    .img-wrapper {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      margin-right: 12px;
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .campaign-name {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 20px;
+      p {
+        margin: 0;
+        color: $fonts-light;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 120px;
+        &.title {
+          color: $fonts-grey-900;
+        }
+      }
+    }
   }
-  
-  table tr:nth-child(even){background-color: #f2f2f2;}
-  
-  table tr:hover {background-color: #ddd;}
-  
-  table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color:#F9F9FB;
-    color: #667085;
+  th {
+    padding: 13px 16px;
+    background-color: $bg-light;
+    color: $fonts-light;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: left;
+    &:first-child {
+      border-radius: 8px 0 0 0;
+    }
+    &:last-child {
+      border-radius: 0 0 0 8px;
+    }
   }
-  
+}
