--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,6 @@
 // Font family 'heebo 
-@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;800&display=swap');
+@import url('~bootstrap/scss/bootstrap.scss');
 
 // color variables
 $primary: #404968;
@@ -7,7 +8,7 @@ $primary-600: #4A5578;
 $white: #ffffff;
 $bg-light: #F9F9FB;
 $bg-light-green: #ECFDF3;
-
+$bg-grey-100: #F2F4F7;
 
 // fonts color
 $fonts-black: #111322;
@@ -21,4 +22,12 @@ $fonts-green: #027A48;
 body {
     font-family: 'Heebo', sans-serif;
     font-weight: 500;
+}
+
+// override css
+.progress {
+    height: 8px;
+    &-bar {
+        background: $primary-600;
+    }
 }
