--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -1,5 +1,8 @@
 @import "../../../global.scss";
-
+.table-wrapper {
+  width: 100%;
+  overflow-x: auto;
+}
 table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -85,6 +88,7 @@ table {
     font-size: 12px;
     line-height: 18px;
     text-align: left;
+    white-space: nowrap;
     &:first-child {
       border-radius: 8px 0 0 0;
     }
