--- a/src/components/Common/Buttons/style.scss
+++ b/src/components/Common/Buttons/style.scss
@@ -1,1 +1,37 @@
-@import '../../../global.scss'
+@import '../../../global.scss';
+
+.btn {
+    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+    border-radius: 8px;
+    border: 1px solid transparent;
+    opacity: .95;
+    padding: 10px 16px;
+    &-icon {
+        margin-right: 8px;
+        width: 20px;
+        height: 20px;
+        object-fit: contain;
+    }
+}
+.btn-primary {
+    color: $white;
+    background-color: $primary-600;
+    border-color: $primary-600; 
+    &:hover {
+        color: $white;
+        background-color: $primary-600;
+        border-color: $primary-600;
+        opacity: 1; 
+    }
+}
+.btn-secondary {
+    color: $fonts-grey-700;
+    background-color: $white;
+    border-color: $white; 
+    &:hover {
+        color: $fonts-grey-700;
+        background-color: $white;
+        border-color: $white;
+        opacity: 1; 
+    }
+}
