--- a/src/global.scss
+++ b/src/global.scss
@@ -45,7 +45,7 @@ html {
   outline: none !important;
 }
 
-// override css 
+// ====== override css =====
 // Progress Bar
 .progress {
   height: 8px;
@@ -53,3 +53,20 @@ html {
     background: $primary-600;
   }
 }
+
+// badge
+.badge {
+  padding: 2px 8px;
+  font-size: 12px;
+  line-height: 18px;
+  &.bg-success {
+      background: $bg-light-green !important;
+      color: $fonts-green;
+  }
+  &.bg-secondary {
+      background: $bg-grey-100 !important;
+      color: $fonts-grey-700;
+  }
+}
+
+// ====== override css =====
