feature/campaign-listview#listing page design

--- a/src/global.scss
+++ b/src/global.scss
@@ -59,6 +59,7 @@ html {
   padding: 2px 8px;
   font-size: 12px;
   line-height: 18px;
+  border-radius: 16px;
   &.bg-success {
       background: $bg-light-green !important;
       color: $fonts-green;
@@ -69,4 +70,31 @@ html {
   }
 }
 
+// calendar
+.date-picker-wrapper {
+  position: relative;
+  .react-datepicker-wrapper {
+    input {
+      background: $white;
+      border-radius: 8px;
+      border: 1px solid $fonts-primary-600;
+      padding: 8px 8px 8px 35px;
+    }
+  }
+  .calendar-img {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+}
+
+// switch 
+.switch-btn-wrapper {
+  background: #f1f1f3;
+  border-radius: 8px;
+  padding: 4px;
+  .btn-secondary {
+    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+  }
+}
 // ====== override css =====
