--- a/src/components/Cards/campaignDetail/style.scss
+++ b/src/components/Cards/campaignDetail/style.scss
@@ -1,96 +1,115 @@
-@import '../../../global.scss';
+@import "../../../global.scss";
 
 .card-wrapper {
-    background: $white;
-    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
-    border-radius: 8px;
-    padding: 24px;
-    width: calc(32% - 50px);
-    margin: 12px;
+  background: $white;
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
+    0px 1px 2px rgba(16, 24, 40, 0.06);
+  border-radius: 8px;
+  margin: 12px 0;
+  border: none;
 
-    &:first-child {
-        margin-left: 0;
+  .card-top {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    .avatar {
+      width: 32px;
+      height: 32px;
+      object-fit: contain;
+      margin-right: 10px;
+    }
+  }
+
+  .title {
+    font-size: 14px;
+    line-height: 20px;
+    color: $fonts-grey-700;
+    margin: 0;
+  }
+
+  .product-name {
+    font-size: 20px;
+    line-height: 30px;
+    color: $fonts-grey-900;
+    margin: 8px 0;
+  }
+
+  .date-wrapper {
+    display: flex;
+    margin-bottom: 25px;
+
+    .sub-title {
+      font-size: 14px;
+      line-height: 20px;
+      color: $fonts-primary-500;
+      margin: 0;
+      margin-right: 8px;
     }
 
-    &:nth-child(3n+1) {
-        margin-left: 0;
+    .active {
+      margin: 0;
+      background: $bg-light-green;
+      border-radius: 16px;
+      color: $fonts-green;
+      font-size: 12px;
+      line-height: 18px;
+      padding: 2px 8px;
     }
+  }
 
-    &:nth-child(3n) {
+  .card-colum-wrapper {
+    display: flex;
+
+    .card-colum {
+      width: calc(50% - 10px);
+      margin-right: 10px;
+
+      &:nth-child(2n) {
         margin-right: 0;
+      }
     }
+  }
+  .colum-title {
+    margin: 0;
+    font-size: 14px;
+    line-height: 20px;
+    color: $primary-600;
+  }
 
-    .card-top {
-        display: flex;
-    }
+  .colum-amount {
+    margin: 4px 0;
+    font-size: 18px;
+    line-height: 28px;
+    color: $fonts-grey-900;
+  }
 
-    .title {
+  .card-inner {
+    display: flex;
+    align-items: flex-end;
+    .card-description {
+      h3 {
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 38px;
+        color: $fonts-grey-900;
+        margin-bottom: 16px;
+      }
+      p {
         font-size: 14px;
         line-height: 20px;
-        color: $fonts-grey-700;
-        margin: 0;
+        color: $fonts-light;
+        margin-bottom: 0;
+      }
     }
+  }
 
-    .product-name {
-        font-size: 20px;
-        line-height: 30px;
-        color: $fonts-grey-900;
-        margin: 8px 0;
+  .green-status {
+    font-size: 14px;
+    line-height: 20px;
+    color: $fonts-green;
+    margin-bottom: 0;
+    svg {
+      margin-right: 4px;
     }
-
-    .date-wrapper {
-        display: flex;
-        margin-bottom: 25px;
-
-        .sub-title {
-            font-size: 14px;
-            line-height: 20px;
-            color: $fonts-primary-500;
-            margin: 0;
-            margin-right: 8px;
-        }
-
-        .active {
-            margin: 0;
-            background: $bg-light-green;
-            border-radius: 16px;
-            color: $fonts-green;
-            font-size: 12px;
-            line-height: 18px;
-            padding: 2px 8px;
-        }
-    }
-
-    .card-colum-wrapper {
-        display: flex;
-
-        .card-colum {
-            width: calc(50% - 10px);
-            margin-right: 10px;
-
-            p {
-                margin: 0;
-                font-size: 14px;
-                line-height: 20px;
-                color: $primary-600;
-            }
-
-            .colum-title {
-                margin: 4px 0;
-                font-size: 18px;
-                line-height: 28px;
-                color: $fonts-grey-900;
-            }
-
-            &:nth-child(2n) {
-                margin-right: 0;
-            }
-
-            .green-status {
-                font-size: 14px;
-                line-height: 20px;
-                color: $fonts-green;
-            }
-        }
-    }
+  }
 }
