--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -7,7 +7,7 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
-  margin: 20px 20px 20px 20px;
+  margin: 24px 0;
   background-color: $white;
   box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
     0px 1px 2px rgba(16, 24, 40, 0.06);
