--- a/src/global.scss
+++ b/src/global.scss
@@ -97,4 +97,14 @@ html {
     box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
   }
 }
+
+
+// Link
+.link-dark {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: $fonts-light !important;
+  text-decoration: none; 
+}
 // ====== override css =====
