edit form design

--- a/src/components/Common/Input/style.scss
+++ b/src/components/Common/Input/style.scss
@@ -7,6 +7,7 @@
         background: $white;
         border-radius: 8px;
         border: 1px solid $fonts-primary-600;
+        padding: 10px 14px;
         &.has-img {
             padding: 10px 14px 10px 33px;
         }
