--- a/src/components/Common/Button/style.scss
+++ b/src/components/Common/Button/style.scss
@@ -20,7 +20,7 @@
     &:hover {
         color: $white;
         background-color: $primary-600;
-        border-color: $primary-600;
+        border-color: $white;
         opacity: 1; 
     }
 }
@@ -28,10 +28,13 @@
     color: $fonts-grey-700;
     background-color: $white;
     border-color: $white; 
-    &:hover {
+    &:hover,
+    &:focus {
         color: $fonts-grey-700;
         background-color: $white;
-        border-color: $white;
+        border-color: $primary-600;
         opacity: 1; 
+        outline: none;
+        box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
     }
 }
