--- a/src/global.scss
+++ b/src/global.scss
@@ -5,10 +5,13 @@
 // color variables
 $primary: #404968;
 $primary-600: #4a5578;
+$primary-300: #B9C0D4;
+$blue-600: #1570EF;
 $white: #ffffff;
 $bg-light: #f9f9fb;
 $bg-light-green: #ecfdf3;
 $bg-grey-100: #f2f4f7;
+$bg-grey-200: #EAECF0;
 
 // fonts color
 $fonts-black: #111322;
@@ -45,7 +48,26 @@ html {
   outline: none !important;
 }
 
+.p-20 {
+  padding: 20px;
+}
+.form-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: $blue-600;
+  text-decoration: none;
+}
 // ====== override css =====
+// Card
+.card {
+  background: $white;
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
+    0px 1px 2px rgba(16, 24, 40, 0.06);
+  border-radius: 8px;
+  margin: 12px 0;
+  border: none;
+}
 // Progress Bar
 .progress {
   height: 8px;
@@ -106,5 +128,25 @@ html {
   line-height: 20px;
   color: $fonts-light !important;
   text-decoration: none; 
+}
+// Formik form css
+.formik-wrapper {
+  label {
+      margin-bottom: 8px;
+      font-size: 14px;
+      line-height: 20px;
+      color: $fonts-grey-700;
+      width: 100%;
+      margin-top: 24px;
+      &:first-child {
+        margin-top: 0;
+      }
+  }
+  .input-container, input {
+    width: 100%;
+  }
+  .farmikSelect {
+    width: 60%;
+  }
 }
 // ====== override css =====
