--- a/src/components/Common/Dropdown/style.scss
+++ b/src/components/Common/Dropdown/style.scss
@@ -6,5 +6,9 @@
     box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
     border-radius: 8px;
     min-width: 150px;
-    // padding: 5px 16px;    
+    // padding: 5px 16px; 
+    .static-value {
+        display: flex;
+        
+    }   
 }
