edit form design

--- a/src/global.scss
+++ b/src/global.scss
@@ -52,8 +52,8 @@ html {
   outline: none !important;
 }
 
-.p-20 {
-  padding: 20px;
+.card-spacing {
+  padding: 20px 20px 40px 20px;
 }
 .form-link {
   font-weight: 400;
