--- a/src/components/Campaign/CampaignDetail/EditCampaignForm/style.scss
+++ b/src/components/Campaign/CampaignDetail/EditCampaignForm/style.scss
@@ -1,202 +1,5 @@
 @import '../../../../global.scss';
 
-// .form-wrapper {
-//     display: flex;
-
-//     .form-seach-bar {
-//         position: relative;
-//     }
-
-//     .form-main {
-//         display: flex;
-//         flex-direction: row;
-//         align-items: center;
-
-//     }
-// }
-
-// .campaign-details {
-//     font-style: normal;
-//     font-family: 'Heebo';
-//     .campaign-details-campaign-name {
-//         color: #101828;
-//         font-weight: 500;
-//         font-size: 16px;
-//         line-height: 24px;
-//     }
-//     .campaign-details-tracking-code {
-//         color: #667085;
-//         font-weight: 400;
-//         font-size: 14px;
-//         line-height: 20px;
-//     }
-//     .campaign-details-status {
-//         display: flex;
-//         justify-content: space-between;
-//         align-items: center;
-//         .status-heading {
-//             font-weight: 500;
-//             font-size: 14px;
-//             line-height: 20px;
-//             color: #344054;
-//         }
-//     }
-// }
-
-// .campaign-detail-names{
-//     .heading-wrapper{
-//         display: flex;
-//         align-items: center;
-//         flex-direction: row;
-//         justify-content: space-between;
-
-//         .heading{
-//             font-family: 'Heebo';
-//             font-style: normal;
-//             font-weight: 500;
-//             font-size: 14px;
-//             line-height: 20px;
-//             margin-bottom: 0px;
-//             margin-right: 5px;
-//             color: #344054;
-//         }
-//     }
-    
-//     .marketer-name  {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//     }
-//     .advertiser-name {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//     }
-//     .category-name  {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//     }
-//     .type-name  {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//     }
-// }
-
-// .campaign-budget{
-//    .campaign-budget-amount{
-//       display: flex;
-//       align-items: center;
-//       justify-content: space-between;
-//        .heading-wrapper{
-//            display: flex;
-//            align-items: center;
-//            flex-direction: row;
-//            justify-content: space-between;
-        
-//            .heading{
-//               font-family: 'Heebo';
-//               font-style: normal;
-//               font-weight: 500;
-//               font-size: 14px;
-//               line-height: 20px;
-//               margin-bottom: 0px;
-//               margin-right: 5px;
-//               color: #344054;
-//             }
-//         }
-//     }
-//     .campaign-budget-remaining{
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-
-//         .heading-wrapper{
-//             display: flex;
-//             align-items: center;
-//             flex-direction: row;
-//             justify-content: space-between;
-         
-//             .heading{
-//                 font-family: 'Heebo';
-//                 font-style: normal;
-//                 font-weight: 500;
-//                 font-size: 12px;
-//                 line-height: 18px;
-//                margin-bottom: 0px;
-//                margin-right: 5px;
-//                color: #667085;
-//             }
-//         }
-//         .budget-remaining-amount{
-//             font-family: 'Heebo';
-//             font-style: normal;
-//             font-weight: 400;
-//             font-size: 12px;
-//             line-height: 18px;
-//         }
-//     }
-// }
-// .campaign-spend{
-//     .campaign-spend-amount{
-//        display: flex;
-//        align-items: center;
-//        justify-content: space-between;
-//         .heading-wrapper{
-//             display: flex;
-//             align-items: center;
-//             flex-direction: row;
-//             justify-content: space-between;
-         
-//             .heading{
-//                font-family: 'Heebo';
-//                font-style: normal;
-//                font-weight: 500;
-//                font-size: 14px;
-//                line-height: 20px;
-//                margin-bottom: 0px;
-//                margin-right: 5px;
-//                color: #344054;
-//              }
-//         }
-//     }
-//     .campaign-spend-projectedspend{
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
- 
-//         .heading-wrapper{
-//              display: flex;
-//              align-items: center;
-//              flex-direction: row;
-//              justify-content: space-between;
-          
-//                 .heading{
-//                   font-family: 'Heebo';
-//                   font-style: normal;
-//                   font-weight: 500;
-//                   font-size: 12px;
-//                   line-height: 18px;
-//                   margin-bottom: 0px;
-//                   margin-right: 5px;
-//                   color: #667085;
-//                 }
-//         }
-//         .projected-spend-amount{
-//             font-family: 'Heebo';
-//             font-style: normal;
-//             font-weight: 400;
-//             font-size: 12px;
-//             line-height: 18px;
-//         }
-
-//      }
-//  }
-
-
-// Edit form scss ==============
-
 .form-head {
     border-bottom: 1px solid $primary-300;
     margin-bottom: 48px;
@@ -206,24 +9,48 @@
         color: $fonts-grey-900;
         margin-bottom: 8px;
     }
-    p{
+}
+.form-wrapper {
+    padding: 0 24px;
+    .link-wrapper {
+        padding: 30px 0 0;
+    }
+    .light-heading {
+        font-size: 16px;
+        line-height: 24px;
+        color: $fonts-light;
+        margin-bottom: 0;
+    }
+    hr {
+        margin:40px 0;
+    }
+    .align-right {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .grey-card {
+        background: $bg-light;
+        box-shadow: rgb(16 24 40 / 6%) 1px 5px 6px 0px;
+        border-radius: 16px;
+        margin: 24px;
+    }
+
+    .sub-title {
         font-size: 14px;
         line-height: 20px;
         color: $fonts-light;
         margin-bottom: 24px;
         font-weight: 400;
     }
-
-}
-.form-wrapper {
-    padding: 0 24px;
-    .link-wrapper {
-        padding: 46px 0 33px;
-    }
-    .light-heading {
-        font-size: 16px;
-        line-height: 24px;
-        color: $fonts-light;
+    .edit-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 24px 0;
+        h1 {
+            margin: 0 10px;
+        }
     }
 }
 .campaign-details {
