--- a/src/components/Common/Pagination/style.scss
+++ b/src/components/Common/Pagination/style.scss
@@ -1,17 +1,18 @@
 @import "../../../global.scss";
 
 
-a:active {
-    background: #F9F9FB;
-    border-radius: 8px;
-
-}
-
 .pages-links {
     text-decoration: none;
-    padding: 20px;
-    font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
+    background: transparent;
+    border: none;
+    padding: 10px;
+    color: $fonts-light;
+    &.active {
+        color: $primary-600;
+        background: $bg-light;
+        border-radius: 8px;
+    }
 }
