--- a/src/components/Common/Heading/style.scss
+++ b/src/components/Common/Heading/style.scss
@@ -1,6 +1,11 @@
 @import '../../../global.scss';
+h1 {
+    font-size: 48px;
+    line-height: 60px;
+    color: $fonts-black;
+}
 
-.light-title {
+h3 {
     font-size: 16px;
     line-height: 24px;
     color: $fonts-light;
