--- a/src/components/Admin/Sidebar/style.scss
+++ b/src/components/Admin/Sidebar/style.scss
@@ -1,8 +1,10 @@
 .sidebar-member-details{
     width: 400px;
     height: 100vh;
-    background-color: pink;
+    background: #FFFFFF;
+    transition: all 0.5s ease 0s;
 
+    padding: 20px;
     .sidebar-header{
         display: flex;
         justify-content: space-between;
@@ -12,6 +14,10 @@
             display: flex;
             justify-content: space-between;
             flex-direction: column;
+        }
+
+        .close-sidebar{
+            cursor: pointer;
         }
     }
 }
