--- a/src/components/Admin/style.scss
+++ b/src/components/Admin/style.scss
@@ -46,6 +46,8 @@
         bottom: 0;
         right: 0;
         display: none;
+        transition: all 0.5s ease 0s;
+
     }
     .open-side-bar{
         display: block;
@@ -53,5 +55,7 @@
         top: 0;
         bottom: 0;
         right: 0;
+        transition: all 0.5s ease 0s;
+
     }
 }
