--- a/src/components/Admin/style.scss
+++ b/src/components/Admin/style.scss
@@ -55,6 +55,8 @@
         bottom: 0;
         right: 0;
         display: none;
+        transition: all 0.5s ease 0s;
+
     }
     .open-side-bar{
         display: block;
@@ -62,5 +64,7 @@
         top: 0;
         bottom: 0;
         right: 0;
+        transition: all 0.5s ease 0s;
+
     }
 }
