story-book component

--- a/src/components/Admin/Member/style.scss
+++ b/src/components/Admin/Member/style.scss
@@ -9,7 +9,7 @@
     h2{
         font-size: 20px;
         line-height: 30px;
-        color: $fonts-grey-500;
+        color: $fonts-light;
     }
 
     span{
