--- a/src/components/Admin/style.scss
+++ b/src/components/Admin/style.scss
@@ -18,7 +18,7 @@
             gap: 10px;
         }
         .title{
-           color: $fonts-grey-500;
+           color: $fonts-light;
            font-weight: 500;
            font-size: 24px;
            line-height: 32px;
