--- a/src/components/Common/Dropdown/style.scss
+++ b/src/components/Common/Dropdown/style.scss
@@ -9,6 +9,15 @@
     // padding: 5px 16px; 
     .static-value {
         display: flex;
-        
+        align-items: center;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 20px;
+        color: $fonts-primary-400;        
     }   
+    .select-placeholder-text {
+        font-size: 14px;
+        line-height: 20px;
+        color: $fonts-light;
+    }
 }
