--- a/src/components/Common/Input/style.scss
+++ b/src/components/Common/Input/style.scss
@@ -8,13 +8,24 @@
         border-radius: 8px;
         border: 1px solid $fonts-primary-600;
         padding: 10px 14px;
+        font-size: 16px;
+        line-height: 24px;
+        color: $fonts-grey-900;
         &.has-img {
-            padding: 10px 14px 10px 33px;
+            padding: 9px 14px 9px 33px;
+        }
+        &.no-img {            
+            padding: 9px 14px;
+        }
+        &::placeholder {
+            font-size: 16px;
+            line-height: 24px;
+            color: $fonts-light;
         }
     }
     img {
         position: absolute;
-        top: 14px;
+        top: 11px;
         left: 10px;
         width: 20px;
         height: 20px;
