--- a/src/components/Common/Heading/style.scss
+++ b/src/components/Common/Heading/style.scss
@@ -3,19 +3,42 @@ h1 {
     font-size: 48px;
     line-height: 60px;
     color: $fonts-black;
+    margin-bottom: 0;
+}
+h2 {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    margin-bottom: 0;
+    color: $fonts-grey-900;
+}
+h3 {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 0;
+    color: $fonts-grey-900;
+}
+h4 {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 0;
+    color: $fonts-grey-900;
 }
 
-h3 {
+h3.light-title {
     font-size: 16px;
     line-height: 24px;
     color: $fonts-light;
     margin-bottom: 0;
 }
-.header-title {
-    font-size: 24px;
-    line-height: 32px;
-    color: $fonts-grey-900;
+h5 {
+    font-size: 16px;
+    line-height: 24px;
+    color: $fonts-light;
+    margin-bottom: 0;
+    font-weight: 400;
 }
+
 .title-20 {
     font-size: 20px;
     line-height: 30px;
