--- a/src/components/Admin/style.scss
+++ b/src/components/Admin/style.scss
@@ -1,21 +1,35 @@
 @import '../../global.scss';
 
+.admin-page {
+    position: relative;
 
-.header-wrapper{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-    .title-wrapper{
+    .header-wrapper {
         display: flex;
-        align-items: center;
         justify-content: space-between;
-        width: 50%;
-        .title-logo{
-            background: #EFF1F5;
-            border-radius: 12px;
-            padding: 14px;
-            gap: 10px;
+        align-items: center;
+
+        .title-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 50%;
+
+            .title-logo {
+                background: #EFF1F5;
+                border-radius: 12px;
+                padding: 14px;
+                gap: 10px;
+            }
+
+            .title {
+                color: $fonts-grey-500;
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 32px;
+                width: 924px;
+                height: 32px;
+                margin: 0 0 0 20px;
+            }
         }
         .title{
            color: $fonts-light;
@@ -26,12 +40,27 @@
            height: 32px;
            margin: 0 0 0 20px;
         }
+
+        .header-button {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 25%;
+        }
     }
 
-    .header-button{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 25%;
+    .side-bar {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        display: none;
+    }
+    .open-side-bar{
+        display: block;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
     }
 }
