--- a/src/components/Admin/Member/style.scss
+++ b/src/components/Admin/Member/style.scss
@@ -3,13 +3,12 @@
 .card-title{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 18%;
 
     h2{
         font-size: 20px;
         line-height: 30px;
-        color: $fonts-light;
+        color: $fonts-grey-500;
+        margin: 0;
     }
 
     span{
@@ -19,6 +18,13 @@
         padding: 2px 8px;
         background: #F9F9FB;
         border-radius: 16px;
+        margin: 5px;
 
     }
+}
+
+.search-filter-sort{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
