conflict issue resolve

--- a/src/components/Admin/style.scss
+++ b/src/components/Admin/style.scss
@@ -22,7 +22,7 @@
             }
 
             .title {
-                color: $fonts-grey-500;
+                color: $fonts-light;
                 font-weight: 500;
                 font-size: 24px;
                 line-height: 32px;
