--- a/src/components/Admin/style.scss
+++ b/src/components/Admin/style.scss
@@ -56,7 +56,7 @@
         }
     }
 
-    .side-bar {
+    .close-side-bar {
         position: fixed;
         top: 0;
         bottom: 0;
@@ -73,5 +73,11 @@
         right: 0;
         transition: all 0.5s ease 0s;
 
+    }
+    .sidebar-member-details{
+        width: 400px;
+        height: 100vh;
+        background: #FFFFFF;
+        transition: all 0.5s ease 0s;
     }
 }
