--- a/src/components/Campaign/CampaignDetail/EditCampaignForm/style.scss
+++ b/src/components/Campaign/CampaignDetail/EditCampaignForm/style.scss
@@ -31,7 +31,7 @@
     }
     .grey-card {
         background: $bg-light;
-        box-shadow: rgb(16 24 40 / 6%) 1px 5px 6px 0px;
+        box-shadow: rgb(16 24 40 / 6%) 1px 5px 6px 0;
         border-radius: 16px;
         margin: 24px;
     }
