--- a/src/components/Common/Button/style.scss
+++ b/src/components/Common/Button/style.scss
@@ -1,7 +1,7 @@
 @import '../../../global.scss';
 
 .btn {
-    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+    box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1), 0 1px 2px rgba(16, 24, 40, 0.06);
     border-radius: 8px;
     border: 1px solid transparent;
     opacity: .95;
@@ -20,6 +20,11 @@
     color: $white;
     background-color: $primary-600;
     border-color: $primary-600; 
+    svg{
+
+        --svgDefaultColor: $white;
+    }
+    
     &:hover,
     &:focus {
         color: $white;
@@ -41,6 +46,6 @@
         border-color: $primary-600;
         opacity: 1; 
         outline: none;
-        box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+        box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1), 0 1px 2px rgba(16, 24, 40, 0.06);
     }
 }
