--- a/src/components/Common/Dropdown/style.scss
+++ b/src/components/Common/Dropdown/style.scss
@@ -3,7 +3,7 @@
 
 .select-wrapper {
     background: $white;
-    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+    box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1), 0 1px 2px rgba(16, 24, 40, 0.06);
     border-radius: 8px;
     min-width: 150px;
     // padding: 5px 16px; 
