--- a/src/components/Common/Heading/style.scss
+++ b/src/components/Common/Heading/style.scss
@@ -1,28 +1,22 @@
 @import '../../../global.scss';
 h1 {
-    font-size: 30px;
+    font-size: 1.9em;
     line-height: 38px;
     color: $fonts-black;
 }
 h2 {
     font-weight: 500;
-    font-size: 24px;
+    font-size: 1.5em;
     line-height: 32px;
     color: $fonts-grey-900;
 }
 h3 {
-    font-size: 20px;
+    font-size: 1.3em;
     line-height: 30px;
     color: $fonts-grey-900;
 }
-h4 {
-    font-size: 14px;
-    line-height: 20px;
-    color: $fonts-grey-900;
-}
-
 h5 {
-    font-size: 16px;
+    font-size: 1em;
     line-height: 24px;
     color: $fonts-grey-900;
     font-weight: 500;
