--- a/src/components/Common/Input/style.scss
+++ b/src/components/Common/Input/style.scss
@@ -23,7 +23,7 @@
             color: $fonts-light;
         }
     }
-    img {
+    .input-img {
         position: absolute;
         top: 11px;
         left: 10px;
