--- a/src/components/Common/Table/table.scss
+++ b/src/components/Common/Table/table.scss
@@ -9,8 +9,8 @@ table {
   width: 100%;
   margin: 24px 0;
   background-color: $white;
-  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
-    0px 1px 2px rgba(16, 24, 40, 0.06);
+  box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1),
+    0 1px 2px rgba(16, 24, 40, 0.06);
   border-radius: 8px;
 
   thead {
