--- a/src/global.scss
+++ b/src/global.scss
@@ -9,11 +9,18 @@ $primary-300: #B9C0D4;
 $primary-600: #4a5578;
 $primary-800: #30374F;
 $blue-600: #1570EF;
+$blue-50: #EFF8FF;
 $white: #ffffff;
 $bg-light: #f9f9fb;
 $bg-light-green: #ecfdf3;
 $bg-grey-100: #f2f4f7;
 $bg-grey-200: #EAECF0;
+$bg-light-red: #FFEFEF;
+
+
+:root {
+  --svgDefaultColor: #404968;
+}
 
 // fonts color
 $fonts-black: #111322;
@@ -24,6 +31,8 @@ $fonts-primary-500: #556187;
 $fonts-grey-700: #344054;
 $fonts-grey-900: #101828;
 $fonts-green: #027a48;
+$fonts-blue-700: #175CD3;
+$fonts-danger: #D31717;
 
 // others
 $success-500: #12B76A;
@@ -76,11 +85,15 @@ p {
   text-decoration: none;
 }
 // ====== override css =====
+
+path{
+  color: current-color;
+} 
 // Card
 .card {
   background: $white;
-  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
-    0px 1px 2px rgba(16, 24, 40, 0.06);
+  box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1),
+    0 1px 2px rgba(16, 24, 40, 0.06);
   border-radius: 8px;
   margin: 12px 0;
   border: none;
@@ -99,13 +112,27 @@ p {
   font-size: 12px;
   line-height: 18px;
   border-radius: 16px;
+  svg {
+    width: 1em;
+    height: 1em;
+    --svgDefaultColor: currentColor;
+    margin-right: 0.3em;
+  }
+  &.bg-primary {
+    background: $blue-50 !important;
+    color: $fonts-blue-700;
+  }
+  &.bg-secondary {
+    background: $bg-grey-100 !important;
+    color: $fonts-grey-700;
+  }
   &.bg-success {
       background: $bg-light-green !important;
       color: $fonts-green;
   }
-  &.bg-secondary {
-      background: $bg-grey-100 !important;
-      color: $fonts-grey-700;
+  &.bg-danger {
+      background: $bg-light-red !important;
+      color: $fonts-danger;
   }
 }
 
@@ -133,7 +160,7 @@ p {
   border-radius: 8px;
   padding: 4px;
   .btn-secondary {
-    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+    box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1), 0 1px 2px rgba(16, 24, 40, 0.06);
   }
 }
 
