storybook components added

--- a/src/components/Campaign/CampaignDetail/EditCampaignForm/style.scss
+++ b/src/components/Campaign/CampaignDetail/EditCampaignForm/style.scss
@@ -30,7 +30,7 @@
         justify-content: flex-end;
     }
     .grey-card {
-        background: $bg-light;
+        background: $grey-50;
         box-shadow: rgb(16 24 40 / 6%) 1px 5px 6px 0;
         border-radius: 16px;
         margin: 24px;
