--- a/src/components/Common/LayoutComponent/style.scss
+++ b/src/components/Common/LayoutComponent/style.scss
@@ -6,7 +6,7 @@
     height: 100%;
     overflow: hidden;
     min-height: calc(100vh - 3.98rem);
-    background-color: $bg-light;
+    background-color: $grey-50;
 
     .main-container {
         position: relative;
