--- a/src/components/Common/Pagination/style.scss
+++ b/src/components/Common/Pagination/style.scss
@@ -12,7 +12,7 @@
     color: $fonts-light;
     &.active {
         color: $primary-600;
-        background: $bg-light;
+        background: $grey-50;
         border-radius: 8px;
     }
 }
