--- a/src/components/Common/Switch/style.scss
+++ b/src/components/Common/Switch/style.scss
@@ -12,15 +12,15 @@
     }
     .form-check-input {
         box-shadow: none;
-        outline: none;
-        // background-color: $primary-800;
-        // border-color: $primary-800; 
+        outline: none; 
+        font-size: 18px;
         &:checked {
             background-color: $success-500;
             border-color: $success-500;
         }
-        &:focus {
-            border-color: $primary-800;
+        &:focus:not(:checked) {
+            border-color: $grey-300;
+            background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%273%27 fill=%27rgba%280, 0, 0, 0.25%29%27/%3e%3c/svg%3e');
         }
 
     }
