--- a/src/components/Common/Button/style.scss
+++ b/src/components/Common/Button/style.scss
@@ -20,8 +20,7 @@
     color: $white;
     background-color: $primary-600;
     border-color: $primary-600; 
-    svg{
-
+    svg {
         --svgDefaultColor: $white;
     }
     
@@ -48,4 +47,7 @@
         outline: none;
         box-shadow: 0 1px 3px rgba(16, 24, 40, 0.1), 0 1px 2px rgba(16, 24, 40, 0.06);
     }
+}
+.btn-danger {
+    background-color: $danger;
 }
