--- a/src/components/Common/Input/style.scss
+++ b/src/components/Common/Input/style.scss
@@ -3,10 +3,11 @@
 
 .input-container {
     position: relative;
+    margin-bottom: 24px;
     input {
         background: $white;
         border-radius: 8px;
-        border: 1px solid $fonts-primary-600;
+        border: 1px solid $fonts-primary-200;
         padding: 10px 14px;
         font-size: 16px;
         line-height: 24px;
@@ -29,5 +30,13 @@
         left: 10px;
         width: 20px;
         height: 20px;
+    }
+    .error-msg {
+        font-size: 12px;
+        font-weight: 400;
+        color: red;
+        position: absolute;
+        bottom: -20px;
+        left: 3px;
     }
 }
