--- a/src/components/Common/Upload/style.scss
+++ b/src/components/Common/Upload/style.scss
@@ -1,7 +1,7 @@
 @import "../../../global.scss";
 
 .drag-area {
-  border: 1px solid $bg-grey-200;
+  border: 1px solid $grey-200;
   height: 142px;
   width: 100%;
   margin: 0 auto 24px;
