--- a/src/global.scss
+++ b/src/global.scss
@@ -3,19 +3,24 @@
 @import url("~bootstrap/scss/bootstrap.scss");
 
 // color variables
-$primary: #404968;
-$primary-100: #EFF1F5;
-$primary-300: #B9C0D4;
-$primary-600: #4a5578;
+$grey-300: #bbbbbb;
+$grey-200: #EAECF0;
+$grey-100: #f2f4f7;
+$grey-50: #f9f9fb;
+$white: #ffffff;
 $primary-800: #30374F;
+$primary: #404968;
+$primary-600: #4a5578;
+$primary-300: #B9C0D4;
+$primary-200: #dcdfea;
+$primary-100: #EFF1F5;
+$primary-25: #FCFCFD;
 $blue-600: #1570EF;
 $blue-50: #EFF8FF;
-$white: #ffffff;
-$bg-light: #f9f9fb;
-$bg-light-green: #ecfdf3;
-$bg-grey-100: #f2f4f7;
-$bg-grey-200: #EAECF0;
-$bg-light-red: #FFEFEF;
+$success-500: #12B76A;
+$success-100: #ecfdf3;
+$danger: #D92D20;
+$danger-100: #FFEFEF;
 
 
 :root {
@@ -25,17 +30,15 @@ $bg-light-red: #FFEFEF;
 // fonts color
 $fonts-black: #111322;
 $fonts-light: #667085;
-$fonts-primary-400: #7D89B0;
-$fonts-primary-600: #dcdfea;
 $fonts-primary-500: #556187;
-$fonts-grey-700: #344054;
+$fonts-primary-400: #7D89B0;
+$fonts-primary-200: #dcdfea;
 $fonts-grey-900: #101828;
-$fonts-green: #027a48;
+$fonts-grey-700: #344054;
+$fonts-success: #027a48;
 $fonts-blue-700: #175CD3;
 $fonts-danger: #D31717;
 
-// others
-$success-500: #12B76A;
 
 // fonts-family
 $main-font: "Heebo", sans-serif;
@@ -52,6 +55,8 @@ html {
     font-weight: 500;
     font-style: normal;
     background: var(--body-color);
+    font-size: 14px;
+    line-height: 20px;
   }
 }
 
@@ -123,15 +128,15 @@ path{
     color: $fonts-blue-700;
   }
   &.bg-secondary {
-    background: $bg-grey-100 !important;
+    background: $grey-100 !important;
     color: $fonts-grey-700;
   }
   &.bg-success {
-      background: $bg-light-green !important;
-      color: $fonts-green;
+      background: $success-100 !important;
+      color: $fonts-success;
   }
   &.bg-danger {
-      background: $bg-light-red !important;
+      background: $danger-100 !important;
       color: $fonts-danger;
   }
 }
@@ -143,7 +148,7 @@ path{
     input {
       background: $white;
       border-radius: 8px;
-      border: 1px solid $fonts-primary-600;
+      border: 1px solid $primary-200;
       padding: 8px 8px 8px 35px;
     }
   }
